--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.2",
+    "@react-pdf/renderer": "^2.1.1",
+    "jspdf": "^2.5.1",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-pdf": "^5.7.1"
   },
   "devDependencies": {
     "eslint": "8.11.0",
