--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-pdf": "^5.7.1"
+    "react-to-print": "^2.14.4"
   },
   "devDependencies": {
     "eslint": "8.11.0",
