--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.13.1",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
+    "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.5.2",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "next": "12.1.0",
     "react": "17.0.2",
