--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.5.2",
+    "axios": "^0.24.0",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "next": "12.1.0",
