--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-pdf": "^5.7.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
