--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.5.2",
     "axios": "^0.24.0",
+    "cloudinary": "^1.29.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "next": "12.1.0",
