--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.5.2",
+    "@truffle/hdwallet-provider": "^2.0.5",
     "axios": "^0.24.0",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.0",
     "formik": "^2.2.9",
     "next": "12.1.0",
     "react": "17.0.2",
