--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs": "^0.0.1-security",
     "multer": "^1.4.4",
     "next": "12.1.0",
+    "next-connect": "^0.12.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-pdf": "^5.7.2",
