--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.5.2",
     "@truffle/hdwallet-provider": "^2.0.5",
     "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.29.1",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
@@ -24,6 +25,8 @@
     "formidable": "^2.0.1",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.3",
     "multer": "^1.4.4",
     "next": "12.1.0",
     "next-connect": "^0.12.2",
