--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.29.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "express-fileupload": "^1.3.1",
