--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
     "next": "12.1.0",
