--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
     "next": "12.1.0",
+    "next-auth": "^4.3.4",
     "next-connect": "^0.12.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
