--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
+    "ethers": "^5.6.8",
     "express-fileupload": "^1.3.1",
     "formidable": "^2.0.1",
     "formik": "^2.2.9",
