--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.29.3",
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
+    "ncrypt-js": "^2.0.0",
     "next": "12.1.0",
     "next-auth": "^4.3.4",
     "next-connect": "^0.12.2",
