--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "moment": "^2.29.3",
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
+    "ncrypt-js": "^2.0.0",
     "next": "12.1.0",
     "next-auth": "^4.3.4",
     "next-connect": "^0.12.2",
     "pdfkit": "^0.13.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-pdf": "^5.7.2",
     "react-redux": "^7.2.8",
     "react-thunk": "^1.0.0",
     "redux": "^4.1.2",
