--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "12.1.0",
     "next-auth": "^4.0.0-beta.7",
     "next-connect": "^0.12.2",
+    "nodemailer": "^6.7.5",
     "pdfkit": "^0.13.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
