--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.5.2",
+    "@next-auth/mongodb-adapter": "^1.0.3",
     "@truffle/hdwallet-provider": "^2.0.5",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
@@ -31,11 +32,12 @@
     "get-stream": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
+    "mongodb": "^4.7.0",
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
     "ncrypt-js": "^2.0.0",
     "next": "12.1.0",
-    "next-auth": "^4.0.0-beta.7",
+    "next-auth": "^4.4.0",
     "next-connect": "^0.12.2",
     "nodemailer": "^6.7.5",
     "pdfkit": "^0.13.0",
