--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-auth": "^4.0.0-beta.7",
     "next-connect": "^0.12.2",
     "nodemailer": "^6.7.5",
+    "path": "^0.12.7",
     "pdfkit": "^0.13.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
